--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -40,6 +40,11 @@ Tag Values
             <tr>
                 <th>Timestamp</th>
                 <th>Value</th>
+                {% if tag.LookupId %}
+                    <th>Lookup Name</th>
+                {% else %}
+                    <th>Unit</th>
+                {% endif %}
                 <th></th>
                 <th></th>
                 <th></th>
@@ -51,8 +56,10 @@ Tag Values
                     <td>{{ tagValue.Timestamp }}</td>
                     {% if tagValue.Tag.LookupId %}
                         <td>{{ tagValue.Tag.Lookup.LookupValues | selectattr("Value", "equalto", tagValue.Value) | map(attribute = "Name") | list | first }}</td>
+                        <td>{{ tagValue.Tag.Lookup.Name }}</td>
                     {% else %}
-                        <td>{{ tagValue.Value | string + " " + tagValue.Tag.UnitOfMeasurement.Abbreviation }}</td>
+                        <td>{{ tagValue.Value }}</td>
+                        <td>{{ tagValue.Tag.UnitOfMeasurement.Abbreviation }}</td>
                     {% endif %}
                     <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValues.editTagValue", tagValueId = tagValue.TagValueId) }}">
                         <span class="glyphicon glyphicon-edit"></span></a></td>
@@ -80,6 +87,7 @@ Tag Values
             ],
             "columns":
             [
+                null,
                 null,
                 null,
                 { "orderable": false }, // Edit tag value button.
