--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,16 +91,20 @@
 
 {% block content %}
 <div class = "container">
-    {% for category, message in get_flashed_messages(with_categories = true) %}
-    {% if category == "message" %}
-        {% set alertClass = "alert alert-warning" %}
-    {% else %}
-        {% set alertClass = category %}
-    {% endif %}
-    <div class = "{{ alertClass }}">
-        <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
-        {{ message }}
+    <div class = "" id = "jQueryMessages">
+        <!-- <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
+        kats -->
     </div>
+    {% for category, message in get_flashed_messages(with_categories = true) %}
+        {% if category == "message" %}
+            {% set alertClass = "alert alert-warning" %}
+        {% else %}
+            {% set alertClass = category %}
+        {% endif %}
+        <div class = "{{ alertClass }}">
+            <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
+            {{ message }}
+        </div>
     {% endfor %}
     {% block page_content %}
     {% endblock %}
